include_HEADERS        = cpsrksec.h
lib_LTLIBRARIES        = libcpsrksec.la
libcpsrksec_la_SOURCES = util/prime.c             \
			 graph/graph.c            \
			 graph/arc_hash.c         \
			 graph/cliques/cliques.c  \
			 graph/cliques/repo.c     \
			 mincut/mincut.c          \
			 mincut/maxflow.c         \
			 mincut/ghtree.c          \
			 cp/cut.c                 \
			 cp/params.c              \
			 cp/shrinking/c1.c        \
			 cp/shrinking/c1c2.c      \
			 cp/shrinking/c1c2c3.c    \
			 cp/shrinking/s1.c        \
			 cp/shrinking/s1c3.c      \
			 cp/shrinking/shrinking.c \
			 cp/sec/gomoryhu.c        \
			 cp/sec/hong.c            \
			 cp/sec/sec.c
libcpsrksec_la_LIBADD  = -lm
